--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "next": "^8.1.0",
+    "amp-toolbox-optimizer": "^0.5.3",
+    "netlify-lambda": "^1.4.11",
+    "next-aws-lambda": "^2.0.0-alpha.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
