Fix build command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build && cp -a public/_next/serverless/pages src/functions/pages && netlify-lambda build src/functions",
     "start": "next start"
   }
 }
