--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "encoding": "^0.1.12",
     "netlify-lambda": "^1.4.11",
+    "next": "^8.1.0",
     "next-aws-lambda": "^2.0.0-alpha.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
